# back_massage_bot

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.sh  build_and_push_image.sh  develop.sh  docker.py  entrypoint.sh  pull_run_overlay.sh  set-permissions.sh
.github/: LICENSE_HEADER.txt
.github/workflows/: pre-commit.yml
assets/: grid_0000_meta.txt
back_massage_bot/: Dockerfile  Dockerfile.test  build.sh  develop.sh  entrypoint.sh  environment.yml  pixi.toml  post-entry-hooks.sh  pyproject.toml  requirements.txt
back_massage_bot/src/back_massage_bot/: __init__.py  augmentations.py  cloud_to_occupancy_grid.py  fine_tune.py  inference.py  inference_py10_broke.py  rgb_to_segmented_pose_model.py  synthetic_data_gen.py  synthetic_data_gen_util.py  train.py  utils.py
back_massage_bot/src/back_massage_bot/config/: default_transforms.yaml
back_massage_bot/src/back_massage_bot/data/: data.yaml
back_massage_bot/src/back_massage_bot/models/first_run/: args.yaml  events.out.tfevents.1742779938.minerva.439857.0  results.csv
back_massage_bot/src/back_massage_bot/models/second_run_first_finetune/: args.yaml  results.csv
back_massage_bot/src/back_massage_bot/models/third_runs_the_charm/: args.yaml  results.csv
hardware/: 99-arduino-massager.rules  99-esp32-s3-box.rules  99-realsense-libusb.rules  USB_README.md  setup-udev-rules.bash
hardware/CAD/: Clamp_-_Top.stl  USB_README.md  massage_mount v3.stl
src/: README.md
therapeutech/: Dockerfile  build.sh  develop.sh  entrypoint.sh  environment.yml  post-entry-hooks.sh  pyproject.toml  requirements.txt
ws/: .dockerignore
ws/src/main_ros/: Dockerfile  all.scene  build.sh  develop.sh  entrypoint.sh  kinova_log.txt  moveit_log.txt  pixi.toml  post-entry-hooks.sh  viz.rviz
ws/src/main_ros/back_massage_bot_ros/: CMakeLists.txt  package.xml
ws/src/main_ros/back_massage_bot_ros/back_massage_bot_ros/: __init__.py
ws/src/main_ros/back_massage_bot_ros/include/back_massage_bot_ros/: massage_moveit.hpp
ws/src/main_ros/back_massage_bot_ros/launch/: camera-bringup.py  esp32-bringup.py  massage-bringup.py  massage_moveit.launch.py  plan-massage-bringup.py
ws/src/main_ros/back_massage_bot_ros/scripts/: arm_controller.py  cloud_to_ply.py  commands.py  debug_planning.py  esp32_message_handler.py  massage_handler.py  plan_massage.py  relative_cartesian_control_cli.py  rgb_to_segmented_pose.py  utils.py  visualization_utils.py
ws/src/main_ros/back_massage_bot_ros/src/: massage_moveit_node.cpp
