[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "back_massage_bot"
version = "0.1.0"
description = "TherapeuTech project"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"back_massage_bot" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
