[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "back_massage_bot"
version = "0.1.0"
description = "Back Massage Bot project"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["back_massage_bot"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
back_massage_bot = { path = ".", editable = true }

[tool.pixi.tasks]
