[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "therapeutech"
version = "0.1.0"
description = "TherapeuTech project"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["therapeutech"]
package-dir = {"therapeutech" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
